--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>HOLA MUNDO</h1>
-    <h2>grupo 18</h2>
-</body>
+  </head>
+  <body>
+    <header>
+      <span>LOGO</span>
+      <ol>
+        <li><a href="./inicio.html">INICIO</a></li>
+        <li><a href="./nosotros.html">Nosotros</a></li>
+        <li><a href="./contactanos.html">contactanos</a></li>
+        <li><a href="./presentacion.html">Yo</a></li>
+    </ol>
+    </header>
+
+  </body>
 </html>
