--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./nosotros.html">Nosotros</a></li>
         <li><a href="./contactanos.html">contactanos</a></li>
         <li><a href="./presentacion.html">Yo</a></li>
+        <li><a href="./formulario.html">Formulario</a></li>
     </ol>
     </header>
 
