--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="./contactanos.html">contactanos</a></li>
         <li><a href="./presentacion.html">Yo</a></li>
         <li><a href="./formulario.html">Formulario</a></li>
+        <li><a href="./tablas.html">TABLAS</a></li>
     </ol>
     </header>
 
