--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="./presentacion.html">Yo</a></li>
         <li><a href="./formulario.html">Formulario</a></li>
         <li><a href="./tablas.html">TABLAS</a></li>
+        <li><a href="./practica/paginapersonal.html">PAGINA PERSONAL</a></li>
     </ol>
     </header>
 
