--- a/index.html
+++ b/index.html
@@ -2,6 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Primary Meta Tags -->
+    <title>Pagina Personal</title>
+    <meta name="title" content="Pagina Personal" />
+    <meta name="description" content="En este proyecto estamos conociendo HTML - CSS" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pruebas-inicio.vercel.app/practica/paginapersonal.html" />
+    <meta property="og:title" content="Pagina Personal" />
+    <meta property="og:description" content="En este proyecto estamos conociendo HTML - CSS" />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://pruebas-inicio.vercel.app/practica/paginapersonal.html" />
+    <meta property="twitter:title" content="Pagina Personal" />
+    <meta property="twitter:description" content="En este proyecto estamos conociendo HTML - CSS" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
