--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
 
     <!-- Primary Meta Tags -->
-    <title>Pagina Personal</title>
-    <meta name="title" content="Pagina Personal" />
-    <meta name="description" content="En este proyecto estamos conociendo HTML - CSS" />
+    <title>Pagina personal</title>
+    <meta name="title" content="Pagina personal" />
+    <meta name="description" content="Esta es mi pagina todavia en evolucion" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pruebas-inicio.vercel.app/practica/paginapersonal.html" />
-    <meta property="og:title" content="Pagina Personal" />
-    <meta property="og:description" content="En este proyecto estamos conociendo HTML - CSS" />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:url" content="https://pruebas-inicio.vercel.app/" />
+    <meta property="og:title" content="Pagina personal" />
+    <meta property="og:description" content="Esta es mi pagina todavia en evolucion" />
+    <meta property="og:image" content="https://www.ceupe.com/images/easyblog_articles/3583/b2ap3_large_profesion-de-programador-web.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://pruebas-inicio.vercel.app/practica/paginapersonal.html" />
-    <meta property="twitter:title" content="Pagina Personal" />
-    <meta property="twitter:description" content="En este proyecto estamos conociendo HTML - CSS" />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:url" content="https://pruebas-inicio.vercel.app/" />
+    <meta property="twitter:title" content="Pagina personal" />
+    <meta property="twitter:description" content="Esta es mi pagina todavia en evolucion" />
+    <meta property="twitter:image" content="https://www.ceupe.com/images/easyblog_articles/3583/b2ap3_large_profesion-de-programador-web.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
